--- a/p/getd/ld1.ipynb
+++ b/p/getd/ld1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "model=torch.load('./m1.pth.tar')"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "class LinearModel(torch.nn.Module):\n",
@@ -49,17 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1.9999985694885254"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "model.linear.weight.item()"
    ],
@@ -72,21 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[10.0000]], grad_fn=<AddmmBackward>)"
+      "text/plain": "9.999995"
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_x=torch.tensor([[5.]])\n",
+    "x=5.\n",
+    "x1=[]\n",
+    "x1.append(x)\n",
+    "x2=[]\n",
+    "x2.append(x1)\n",
+    "test_x=torch.tensor(x2)\n",
     "test_y=model(test_x)\n",
-    "test_y\n"
+    "test_y.detach().numpy()[0][0]\n"
    ],
    "metadata": {
     "collapsed": false,
